--- a/app/globals.css
+++ b/app/globals.css
@@ -6,18 +6,15 @@ body {
     color: white;
 }
 
-/* ::-webkit-scrollbar {
-    display: none;
-} */
-
 /* just put "visiblesb" on the className to overwrite the width and height of a scrollbar */
-.visiblesb::-webkit-scrollbar {
+.invisiblesb::-webkit-scrollbar {
     width: 10px !important;
     height: 10px !important;
+    display: none;
 }
 
 ::-webkit-scrollbar {
-    width: 0px;
+    width: 5px;
     height: 5px;
 }
 
@@ -40,12 +37,35 @@ body {
 
 /* This is to decrease the start of the scrollbar track */
 ::-webkit-scrollbar-button:start:increment {
-    width: 20%;
+    width: 35%;
     background: transparent;
 }
 
 /* This is to decrease the end of the scrollbar track */
 ::-webkit-scrollbar-button:end:increment {
-    width: 20%;
+    width: 35%;
     background: transparent;
+}
+
+/* timeline item */
+.timeline-item:not(:last-child)::before {
+    content: "";
+    position: absolute;
+    top: -26px;
+    left: -30px;
+    width: 1px;
+    height: calc(100% + 70px);
+    background: #424242;
+}
+  
+.timeline-item::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: -33px;
+    height: 6px;
+    width: 6px;
+    background: #fef08a;
+    border-radius: 50%;
+    box-shadow: 0 0 0 4px #353535;
 }
